# expose-pygeoapi-plugins

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  README_IT.md  example-config.yml  pyproject.toml  setup.py
docker/: Dockerfile  my.pygeoapi.config.yml
expose_plugins/: __init__.py
expose_plugins/process/: base_remote_execution.py  conduit.py  pybox.py  solwcad.py
ingv_plugin_pygeoapi/process/: base_remote_execution.py  conduit.py  extended_echo.py  extended_output_only.py  pybox.py  solwcad.py
