[build-system]
requires = ["setuptools>=46.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expose-pygeoapi-plugins"
version = "1.1.0"
description = "Plugins for pygeoapi process services developed as part of the EXPOSE platform project"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

authors = [
  { name = "Francesco Martinelli"}
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
include-package-data = true
zip-safe = false

